--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
     "name": "@kakekomu/nest-multitenant-db",
-    "version": "1.0.0",
+    "version": "0.0.1",
     "description": "Multi-Tenant Database utility based on TypeORM and NestJS",
     "main": "index.js",
     "files": [
         "dist"
     ],
     "bin": {
-        "mtdb": "dist/cli/index.js"
+        "mtdb": "dist/index.js"
     },
     "scripts": {
-        "test:cli": "yarn tsc && node dist/cli/index.js",
+        "test:cli": "yarn tsc && node dist/index.js",
+        "build": "webpack build --mode development",
         "test": "node dist/utils/readconfig.js"
     },
     "author": "",
@@ -18,10 +19,15 @@
     "dependencies": {
         "reflect-metadata": "^0.1.13",
         "typeorm": "^0.3.17",
-        "typeorm-extension": "^3.5.0"
+        "typeorm-extension": "^3.5.1",
+        "yargs": "^17.7.2"
     },
     "devDependencies": {
+        "@types/yargs": "^17.0.32",
         "chalk": "^5.3.0",
+        "dotenv": "^16.4.5",
+        "mysql2": "^3.10.1",
+        "ts-loader": "^9.5.1",
         "ts-node": "^10.9.2",
         "typescript": "^4.7.4"
     }
