--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
-    "name": "@kakekomu/nest-multitenant-db",
-    "version": "0.0.1",
-    "description": "Multi-Tenant Database utility based on TypeORM and NestJS",
-    "main": "index.js",
+    "name": "typeorm-mtdb",
+    "version": "0.0.15",
+    "description": "Multi-Tenant Database utility based on TypeORM",
+    "main": "dist/index.js",
     "files": [
         "dist"
     ],
     "bin": {
-        "mtdb": "dist/index.js"
+        "mtdb": "dist/cli.js"
     },
     "scripts": {
-        "dev": "ts-node src/index.ts --dev",
+        "dev": "yarn build && node dist/cli.js",
+        "build": "rimraf dist && tsc",
         "prepack": "rimraf dist && tsc"
     },
     "author": "",
@@ -19,16 +20,16 @@
         "reflect-metadata": "^0.1.13",
         "typeorm": "^0.3.17",
         "typeorm-extension": "^3.5.1",
+        "dotenv": "^16.4.5",
         "yargs": "^17.7.2"
     },
     "devDependencies": {
         "@types/yargs": "^17.0.32",
         "chalk": "^5.3.0",
-        "dotenv": "^16.4.5",
+        "ts-node": "^10.9.2",
         "mysql2": "^3.10.1",
         "rimraf": "^5.0.7",
         "ts-loader": "^9.5.1",
-        "ts-node": "^10.9.2",
         "typescript": "^4.7.4"
     }
 }
