--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "typeorm-mtdb",
-    "version": "0.1.0",
+    "version": "0.1.3",
     "description": "Multi-Tenant Database utility based on TypeORM",
     "main": "dist/index.js",
     "files": [
@@ -12,24 +12,31 @@
     "scripts": {
         "dev": "yarn build && node dist/cli.js",
         "build": "rimraf dist && tsc",
-        "prepack": "rimraf dist && tsc"
+        "prepack": "rimraf dist && tsc",
+        "test": "jest"
     },
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "chalk": "^4.1.2",
+        "dotenv": "^16.4.5",
         "reflect-metadata": "^0.1.13",
         "typeorm": "^0.3.17",
         "typeorm-extension": "^3.5.1",
-        "dotenv": "^16.4.5",
-        "chalk": "^4.1.2",
         "yargs": "^17.7.2"
     },
     "devDependencies": {
+        "@jest/globals": "^29.7.0",
+        "@testcontainers/mysql": "^10.10.0",
+        "@types/jest": "^29.5.12",
         "@types/yargs": "^17.0.32",
-        "ts-node": "^10.9.2",
+        "better-sqlite3": "^11.0.0",
+        "jest": "^29.7.0",
         "mysql2": "^3.10.1",
         "rimraf": "^5.0.7",
+        "ts-jest": "^29.1.5",
         "ts-loader": "^9.5.1",
+        "ts-node": "^10.9.2",
         "typescript": "^4.7.4"
     }
 }
