--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "yargs": "^17.7.2"
     },
     "devDependencies": {
+        "@faker-js/faker": "^9.0.0",
         "@jest/globals": "^29.7.0",
         "@testcontainers/mysql": "^10.10.0",
         "@types/jest": "^29.5.12",
